# todolist_fastapi

./: .gitignore  pyproject.toml
alembic/: env.py
src/todolist_fastapi/: classes.py  dir.py  main.py  models.py
src/todolist_fastapi/api/: route.py
src/todolist_fastapi/config/: config.py
src/todolist_fastapi/core/: __init__.py  base.py  models.py  role.py
src/todolist_fastapi/db/: db_helper.py
src/todolist_fastapi/templates/: index.html
